# introduction_pytest

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
basics/src/: autre.py  inverse.py
basics/tests/: first_test.py  test_inverse.py
exercices/src/: fonctions_difficiles.py  liste_apprenants.txt
exercices/tests/: test_add_integer.py  test_fonctions_difficiles.py  test_fonctions_simples.py
