[tool.poetry]
name = "introduction-pytest"
version = "0.1.0"
description = ""
authors = ["serge"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.0"
coverage = "^7.5.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
